<resources>
    <string name="app_name">CourseBook Notify</string>
    <string name="settings_name">Settings</string>
    <string name="addclass_name">Add Class</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="class_school_textfield_hint">Class School</string>
    <string name="class_number_textfield_hint">Class Number</string>
    <string name="section_number_textfield_hint">Section Number</string>
    <string name="semester_textfield_hint">Semester</string>
    <string name="button_sumbit">Submit</string>
    <string name="action_delete">Delete</string>
    <string name="notifications_Checkbox">Notify when a previously open class is now open?</string>
    <string name="alarm_notice_battery">How often should this be checked?\n (Note: A lower value may result in higher battery drain)</string>

    <string-array name="Alarm_Spinner">
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>3 Hours</item>
        <item>6 Hours</item>
        <item>24 Hours</item>
    </string-array>

</resources>
